completed coding fruit store assignment

--- a/templates/fruits.html
+++ b/templates/fruits.html
@@ -24,13 +24,31 @@
         <section class="jumbotron text-center">
           <div class="container">
             <h1 class="jumbotron-heading">Dojo Fruits</h1>
-            <p>Please figure out how to display the images here...</p>
-
             <p>
               <a href="/" class="btn btn-primary my-2">Go back</a>
             </p>
           </div>
         </section>
+        <div class="container w-25">
+            <table class="table table-bordered col-sm">
+              <tr>
+                <td>Apple</td>
+                <td><img src="../static/img/apple.png" alt="Apple"></td>
+              </tr>
+              <tr>
+                <td>Blackberry</td>
+                <td><img src="../static/img/blackberry.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>Raspberry</td>
+                <td><img src="../static/img/raspberry.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>Strawberry</td>
+                <td><img src="../static/img/strawberry.png" alt=""></td>
+              </tr>
+            </table>
+        </div>
   
       </main>
       
