--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
   
         <div class="album py-5 bg-light">
           <div class="container">
-             <form action='/checkout' method='post'>
+            <form action='/checkout' method='post'>
                 <h4 class="mb-3" id='buy'>What would you like to buy?</h4>
                 <table class="table table-striped">
                     <thead>
@@ -80,6 +80,19 @@
                             </select>
                         </td>
                     </tr>
+                    <tr>
+                      <td>Blackberry</td>
+                      <td>
+                          <select name='blackberry'>
+                              <option value='0'>0</option>
+                              <option value='1'>1</option>
+                              <option value='2'>2</option>
+                              <option value='3'>3</option>
+                              <option value='4'>4</option>
+                          </select>
+                      </td>
+                  </tr>
+
                     </tbody>
                 </table>
   
